[gd_scene load_steps=7 format=3 uid="uid://bnxk3pk1heokt"]

[ext_resource type="Script" path="res://03_Scripts/menu.gd" id="1_l735l"]
[ext_resource type="FontFile" uid="uid://ebe1ov8pjolh" path="res://01_Assets/03_Fonts/LeagueGothic-Regular.otf" id="1_mna6l"]
[ext_resource type="Texture2D" uid="uid://8i80a0k56c46" path="res://01_Assets/01_Sprites/04_Backgrounds/JF_TitleScreen.jpg" id="1_qgn2p"]
[ext_resource type="FontFile" uid="uid://bsry8lcv357nh" path="res://01_Assets/03_Fonts/Reglo-Bold.otf" id="2_u7p7r"]
[ext_resource type="Script" path="res://03_Scripts/MainMenuButtons.gd" id="3_7vbe8"]
[ext_resource type="AudioStream" uid="uid://bf2w2moongnq6" path="res://01_Assets/02_Audio/Music/JumpfightersTheme.wav" id="6_3pv1f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l735l")

[node name="1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuButtons" type="VBoxContainer" parent="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_right = 168.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="QuickFightButton" type="Button" parent="1/MainMenuButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 60
text = "Quick Fight"
script = ExtResource("3_7vbe8")

[node name="FightFightButton" type="Button" parent="1/MainMenuButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 60
text = "Fight Fight
"
icon_alignment = 1

[node name="EndlessFightButton" type="Button" parent="1/MainMenuButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 60
text = "Endless Fight"

[node name="OptionsButton" type="Button" parent="1/MainMenuButtons"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="TitleScreen" type="Sprite2D" parent="1"]
z_index = -5
position = Vector2(960, 540)
texture = ExtResource("1_qgn2p")

[node name="2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackMatte" type="ColorRect" parent="2"]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FightFightText" type="Label" parent="2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 150.0
offset_right = 253.0
offset_bottom = 271.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_mna6l")
theme_override_font_sizes/font_size = 200
text = "HOW ARE WE DOING THIS?"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -113.0
offset_right = 313.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ThreeRoundsButton" type="Button" parent="2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 50
text = "First to 3 Points"

[node name="FiveRoundsButton" type="Button" parent="2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 50
text = "First to 5 Points"

[node name="ThirteenRoundsButton" type="Button" parent="2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 50
text = "First to 13 Points"

[node name="FightFightBackButton" type="Button" parent="2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u7p7r")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="3" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackMatte" type="ColorRect" parent="3"]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="OptionsText" type="Label" parent="3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 150.0
offset_right = 253.0
offset_bottom = 271.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_mna6l")
theme_override_font_sizes/font_size = 100
text = "OPTIONS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -92.0
offset_right = 312.5
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="PlaceholderButton" type="Button" parent="3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Non-Working Placeholder"

[node name="BackButton" type="Button" parent="3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3pv1f")
autoplay = true
bus = &"MenuBGM"

[connection signal="pressed" from="1/MainMenuButtons/QuickFightButton" to="." method="_on_quick_fight_button_pressed"]
[connection signal="pressed" from="1/MainMenuButtons/FightFightButton" to="." method="_on_fight_fight_button_pressed"]
[connection signal="pressed" from="1/MainMenuButtons/EndlessFightButton" to="." method="_on_endless_fight_button_pressed"]
[connection signal="pressed" from="1/MainMenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="2/VBoxContainer/ThreeRoundsButton" to="." method="_on_three_rounds_button_pressed"]
[connection signal="pressed" from="2/VBoxContainer/FiveRoundsButton" to="." method="_on_five_rounds_button_pressed"]
[connection signal="pressed" from="2/VBoxContainer/ThirteenRoundsButton" to="." method="_on_thirteen_rounds_button_pressed"]
[connection signal="pressed" from="2/VBoxContainer/FightFightBackButton" to="." method="_on_fight_fight_back_button_pressed"]
[connection signal="pressed" from="3/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
